added new reporting types of information that are now provided by the system

--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,7 @@ html, body, #mainContainer {
 
 .topListLabel {
   color         : #444;
+  font-size     : larger;
   font-weight   : bolder;
   border-bottom : solid 2px #666;
   text-align    : center;
